<resources>
    <string name="app_name">Scrobblipy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scrobbler_count">777 scrobblers</string>
    <string name="username">capitanGalactico</string>

    <!-- Estos son los dados del menu -->
    <string name="item_home">Home</string>
    <string name="item_music">Music</string>
    <string name="item_events">Events</string>
    <string name="item_scrobbles">Scrobbles</string>
    <string name="item_data">About Me</string>
    <string name="item_top_albums">Top Albums</string>
    <string name="item_top_artists">Top Artists</string>
    <string name="item_top_tracks">Top Tracks</string>

    <string name="default_artist">Artist name</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
</resources>
