<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_events"
            android:checked="false"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/item_events" />
        <item
            android:id="@+id/nav_music"
            android:checked="false"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/item_music" />
        <item
            android:id="@+id/data_nav"
            android:title="@string/item_data">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_scrobbles"
                        android:checked="false"
                        android:icon="@drawable/ic_menu_scrobble"
                        android:title="@string/item_scrobbles" />
                    <item
                        android:id="@+id/nav_top_tracks"
                        android:checked="false"
                        android:icon="@drawable/ic_menu_track"
                        android:title="@string/item_top_tracks" />
                    <item
                        android:id="@+id/nav_top_artist"
                        android:checked="false"
                        android:icon="@drawable/ic_menu_artist"
                        android:title="@string/item_top_artists" />
                    <item
                        android:id="@+id/nav_top_albums"
                        android:checked="false"
                        android:icon="@drawable/ic_menu_album"
                        android:title="@string/item_top_albums" />
                </group>
            </menu>
        </item>
    </group>
</menu>